--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,8 @@
 {
     "extends": "airbnb-base",
     "rules": {
-        "no-console": "off",
         "prefer-destructuring": "off",
         "no-use-before-define": ["error", { "functions": false, "classes": true }]
     }
+    "env": { "es6": true }
 }
