--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,9 @@
     "rules": {
         "prefer-destructuring": "off",
         "no-use-before-define": ["error", { "functions": false, "classes": true }]
+    },
+    "env": {
+        "es6": true,
+        "node": true
     }
-    "env": { "es6": true }
 }
