generate unique IDs on the server side

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "extends": "airbnb-base",
     "rules": {
         "prefer-destructuring": "off",
-        "no-use-before-define": ["error", { "functions": false, "classes": true }]
+        "no-use-before-define": ["error", { "functions": false, "classes": true }],
+        "no-plusplus": "off"
     },
     "env": {
         "es6": true,
